--- a/index.html
+++ b/index.html
@@ -4,10 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Portfolio-Shane-McElrath</title>
 </head>
 <body>
-    
+    <header>
+        <h1>
+            <a href="">Shane McElrath</a>
+        </h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="">About Me</a>
+                </li>
+                <li>
+                    <a href="">Work</a>
+                </li>
+                <li>
+                    <a href="">Contact Me</a>
+                </li>
+                <li>
+                    <a href="">Resume</a>
+                </li>
+            </ul>
+        </nav>
+
+    </header>
+
+    <div class="hero">
+        hi
+    </div>
+
 </body>
 </html>
