Finished Hero and About-Me section.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,37 @@
     </header>
 
     <div class="hero">
-        hi
+        <div>Web Developer</div>
     </div>
+    
+
+    <section>
+        <h2>About<br>Me</h2>
+        <div class="about-me">
+            <p>
+                Hello i am shanelkjsdfkjsfljsfj jslfj sfj sjflsjf j sdjf jksalkjsf sjfl jsfjsf ljsfj sjf jlsjkdflsjafl jsfl sfj lsjf ljsljfslkjf kjf ljdjflaksjfl  sf jsfl jsfj
+                skjf saf sjf sjf lsj f jlkjsf ljslf jsljf ljsf sfk sfj saljf ljsf ljafljoi cjf iwf noicxf we f sjfrekj jfs l;kjafj lksf sjf lkjakjdsjkf sf kasj f klajsf klajsfsfk
+                askfj a slkfjskjfljsdflkjsdfoidsf kjei dsofj lkelks joije esjfsjdoieslkjflkjelks fkjlesoifj e
+            </p>
+            <p>
+                Hello i am shanelkjsdfkjsfljsfj jslfj sfj sjflsjf j sdjf jksalkjsf sjfl jsfjsf ljsfj sjf jlsjkdflsjafl jsfl sfj lsjf ljsljfslkjf kjf ljdjflaksjfl  sf jsfl jsfj
+                skjf saf sjf sjf lsj f jlkjsf ljslf jsljf ljsf sfk sfj saljf ljsf ljafljoi cjf iwf noicxf we f sjfrekj jfs l;kjafj lksf sjf lkjakjdsjkf sf kasj f klajsf klajsfsfk
+                askfj a slkfjskjfljsdflkjsdfoidsf kjei dsofj lkelks joije esjfsjdoieslkjflkjelks fkjlesoifj e
+            </p>
+        </div>
+    </section>
+
+    <section>
+        <h2>Work</h2>
+        <div></div>
+    </section>
+
+    <section>
+        <h2>Contact<br>Me</h2>
+        <div></div>
+    </section>
+
+
 
 </body>
 </html>
