Finished Contact-me section.

--- a/index.html
+++ b/index.html
@@ -15,16 +15,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="">About Me</a>
+                    <a href="#about-me">About Me</a>
                 </li>
                 <li>
-                    <a href="">Work</a>
+                    <a href="#work">Work</a>
                 </li>
                 <li>
-                    <a href="">Contact Me</a>
-                </li>
-                <li>
-                    <a href="">Resume</a>
+                    <a href="#contact-me">Contact Me</a>
                 </li>
             </ul>
         </nav>
@@ -36,9 +33,9 @@
     </div>
     
 
-    <section>
+    <section id="about-me">
         <h2>About<br>Me</h2>
-        <div class="about-me">
+        <div>
             <p>
                 Hello i am shanelkjsdfkjsfljsfj jslfj sfj sjflsjf j sdjf jksalkjsf sjfl jsfjsf ljsfj sjf jlsjkdflsjafl jsfl sfj lsjf ljsljfslkjf kjf ljdjflaksjfl  sf jsfl jsfj
                 skjf saf sjf sjf lsj f jlkjsf ljslf jsljf ljsf sfk sfj saljf ljsf ljafljoi cjf iwf noicxf we f sjfrekj jfs l;kjafj lksf sjf lkjakjdsjkf sf kasj f klajsf klajsfsfk
@@ -52,14 +49,26 @@
         </div>
     </section>
 
-    <section>
+    <section id="work">
         <h2>Work</h2>
         <div></div>
     </section>
 
-    <section>
+    <section id="contact-me">
         <h2>Contact<br>Me</h2>
-        <div></div>
+        <div>
+            <ul>
+                <li>
+                    <a href="">Shane@rangermac.com</a>
+                </li>
+                <li>
+                    <a href="https://github.com/ShaneMcElrath">GitHub</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/shane-mcelrath-42113b221/">LinkedIn</a>
+                </li>
+            </ul>
+        </div>
     </section>
 
 
