--- a/index.html
+++ b/index.html
@@ -51,7 +51,28 @@
 
     <section id="work">
         <h2>Work</h2>
-        <div></div>
+        <div class="projects"> 
+            <div class="run-buddy project">
+                <div class="color-shift"></div>
+                <div class="project-lable">
+                    <h3>Run Buddy</h3>
+                    HTML / CSS
+                </div>
+            </div>
+            <div class="robot-gladiators project">
+                <div class="color-shift"></div>
+                <div class="project-lable">
+                    <h3>Robot Gladiators</h3>
+                    HTML / Javascript
+                </div>
+            </div>
+            <div class="coming-soon project">
+                <div class="color-shift"></div>
+                <div class="project-lable">
+                    <h3>Coming Soon</h3>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section id="contact-me">
