Fixed project links and started on making website layout change based on screen size.

--- a/index.html
+++ b/index.html
@@ -52,15 +52,19 @@
     <section id="work">
         <h2>Work</h2>
         <div class="projects"> 
-            <div class="run-buddy project">
-                <div class="color-shift"></div>
-                <div class="project-lable">
-                    <h3>Run Buddy</h3>
-                    HTML / CSS
+                <div class="run-buddy project">
+                    <a href="https://shanemcelrath.github.io/run-buddy/">
+                        <div class="color-shift"></div>
+                    </a>
+                    <div class="project-lable">
+                        <h3>Run Buddy</h3>
+                        HTML / CSS
+                    </div>
                 </div>
-            </div>
             <div class="robot-gladiators project">
-                <div class="color-shift"></div>
+                <a href="https://shanemcelrath.github.io/robot-gladiators/">
+                    <div class="color-shift"></div>
+                </a>
                 <div class="project-lable">
                     <h3>Robot Gladiators</h3>
                     HTML / Javascript
@@ -80,7 +84,7 @@
         <div>
             <ul>
                 <li>
-                    <a href="">Shane@rangermac.com</a>
+                    <a href="#contact-me">Shane@rangermac.com</a>
                 </li>
                 <li>
                     <a href="https://github.com/ShaneMcElrath">GitHub</a>
