Added more comments

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Portfolio-Shane-McElrath</title>
 </head>
 <body>
+
+    <!--Header-->
     <header>
         <h1>
             <a href="">Shane McElrath</a>
@@ -25,14 +27,14 @@
                 </li>
             </ul>
         </nav>
-
     </header>
 
+    <!--Hero image-->
     <div class="hero">
         <div>Web Developer</div>
     </div>
     
-
+    <!--About me section-->
     <section id="about-me">
         <h2>About<br>Me</h2>
         <div>
@@ -49,11 +51,13 @@
         </div>
     </section>
 
+    <!--Work section-->
     <section id="work">
         <h2>Work</h2>
         <div class="projects"> 
                 <div class="run-buddy project">
                     <a href="https://shanemcelrath.github.io/run-buddy/">
+                        <!--hover transition layer-->
                         <div class="color-shift"></div>
                     </a>
                     <div class="project-lable">
@@ -63,6 +67,7 @@
                 </div>
             <div class="robot-gladiators project">
                 <a href="https://shanemcelrath.github.io/robot-gladiators/">
+                    <!--hover transition layer-->
                     <div class="color-shift"></div>
                 </a>
                 <div class="project-lable">
@@ -71,6 +76,7 @@
                 </div>
             </div>
             <div class="coming-soon project">
+                <!--hover transition layer-->
                 <div class="color-shift"></div>
                 <div class="project-lable">
                     <h3>Coming Soon</h3>
@@ -79,6 +85,7 @@
         </div>
     </section>
 
+    <!--Contact me section-->
     <section id="contact-me">
         <h2>Contact<br>Me</h2>
         <div>
