--- a/index.html
+++ b/index.html
@@ -39,14 +39,10 @@
         <h2>About<br>Me</h2>
         <div>
             <p>
-                Hello i am shanelkjsdfkjsfljsfj jslfj sfj sjflsjf j sdjf jksalkjsf sjfl jsfjsf ljsfj sjf jlsjkdflsjafl jsfl sfj lsjf ljsljfslkjf kjf ljdjflaksjfl  sf jsfl jsfj
-                skjf saf sjf sjf lsj f jlkjsf ljslf jsljf ljsf sfk sfj saljf ljsf ljafljoi cjf iwf noicxf we f sjfrekj jfs l;kjafj lksf sjf lkjakjdsjkf sf kasj f klajsf klajsfsfk
-                askfj a slkfjskjfljsdflkjsdfoidsf kjei dsofj lkelks joije esjfsjdoieslkjflkjelks fkjlesoifj e
-            </p>
-            <p>
-                Hello i am shanelkjsdfkjsfljsfj jslfj sfj sjflsjf j sdjf jksalkjsf sjfl jsfjsf ljsfj sjf jlsjkdflsjafl jsfl sfj lsjf ljsljfslkjf kjf ljdjflaksjfl  sf jsfl jsfj
-                skjf saf sjf sjf lsj f jlkjsf ljslf jsljf ljsf sfk sfj saljf ljsf ljafljoi cjf iwf noicxf we f sjfrekj jfs l;kjafj lksf sjf lkjakjdsjkf sf kasj f klajsf klajsfsfk
-                askfj a slkfjskjfljsdflkjsdfoidsf kjei dsofj lkelks joije esjfsjdoieslkjflkjelks fkjlesoifj e
+                My name is Shane, and this website is my digital portfolio.  
+                My passion is for software development with experience programming HTML5, CSS3, JavaScript, Python, C++, and C.  
+                Software development is about the mashing up of problem solving, creativity, and being agile in your pursuit of amazing web solutions.
+                I deliver quality programming solutions and strive to produce quality work with positive client relationship building.
             </p>
         </div>
     </section>
