Added group project to portfolio

--- a/index.html
+++ b/index.html
@@ -72,10 +72,13 @@
                 </div>
             </div>
             <div class="coming-soon project">
-                <!--hover transition layer-->
-                <div class="color-shift"></div>
+                <a href="https://rebeccadherrera.github.io/shellter/">
+                    <!--hover transition layer-->
+                    <div class="color-shift"></div>
+                </a>
                 <div class="project-lable">
-                    <h3>Coming Soon</h3>
+                    <h3>Shellter</h3>
+                    HTML / Javascript / CSS
                 </div>
             </div>
         </div>
