--- a/index.html
+++ b/index.html
@@ -52,23 +52,23 @@
         <h2>Work</h2>
         <div class="projects"> 
                 <div class="run-buddy project">
-                    <a href="https://shanemcelrath.github.io/run-buddy/">
+                    <a href="https://eloncoin.herokuapp.com/">
                         <!--hover transition layer-->
                         <div class="color-shift"></div>
                     </a>
                     <div class="project-lable">
-                        <h3>Run Buddy</h3>
-                        HTML / CSS
+                        <h3>ElonCoin</h3>
+                        Node / HandleBars
                     </div>
                 </div>
             <div class="robot-gladiators project">
-                <a href="https://shanemcelrath.github.io/robot-gladiators/">
+                <a href="https://shanemcelrath.github.io/run-buddy/">
                     <!--hover transition layer-->
                     <div class="color-shift"></div>
                 </a>
                 <div class="project-lable">
-                    <h3>Robot Gladiators</h3>
-                    HTML / Javascript
+                    <h3>Run Buddy</h3>
+                    HTML / CSS
                 </div>
             </div>
             <div class="coming-soon project">
@@ -81,6 +81,7 @@
                     HTML / Javascript / CSS
                 </div>
             </div>
+            
         </div>
     </section>
 
